# subtube

./: .envrc  README.md  cabal.project  devshell.toml  flake.nix  fourmolu.yaml  hie.yaml  subtube.cabal
.github/workflows/: CI.yaml
api/: Main.hs
app/: Main.hs
env_config/: backend.toml  common.toml  frontend.toml
migration/psql/: sqitch.conf  sqitch.plan
migration/psql/deploy/: appschema.sql  tables.sql
migration/psql/revert/: appschema.sql  tables.sql
migration/psql/verify/: appschema.sql  tables.sql
src/: Api.hs  ApiServer.hs  ApiType.hs  Db.hs  Docs.hs  Javascript.hs  MyPrelude.hs  Types.hs
src/Api/: Docs.hs  Media.hs  Tag.hs  Utils.hs  Youtube.hs
src/Db/: Command.hs  Queries.hs  Session.hs
src/Invidious/: Client.hs  Parser.hs
src/Types/: AggMedia.hs  Cached.hs  Env.hs  General.hs  Media.hs  Schemas.hs  SessionPool.hs  TagMember.hs  Utils.hs  Youtube.hs
test/: Main.hs  Spec.hs  TestEnv.hs
test/Psql/: PsqlSpec.hs
