cabal-version:   2.4
name:            subtube
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          weiss
maintainer:      weiss <kingbaiing@163.com>
copyright:       2024 weiss
tested-with:     GHC ==9.4.8
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/subtube#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/subtube.git

common common-options
  build-depends:      base
  default-language:   Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MonadComprehensions
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  build-depends:
    , aeson
    , bytestring
    , containers
    , contravariant
    , data-default
    , exceptions
    , hasql               >=1.6.4.0
    , hasql-transaction
    , http-api-data
    , http-client
    , js-jquery
    , lens
    , mtl
    , random
    , rel8                >=1.5.0
    , rio
    , semigroupoids
    , servant-docs
    , servant-js
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , static-text
    , swagger2
    , transformers
    , unix-time
    , uuid
    , validity
    , validity-text
    , validity-uuid
    , wai
    , warp
    , wreq

  exposed-modules:
    Api
    Api.Docs
    Api.Tag
    Api.Utils
    Api.Youtube
    Db
    Db.Command
    Db.Queries
    Invidious.Client
    Invidious.Parser
    MyPrelude
    Repl
    Types
    Types.AggMedia
    Types.Cached
    Types.Env
    Types.General
    Types.Media
    Types.Schemas
    Types.SessionPool
    Types.TagMember
    Types.Utils
    Types.Youtube

-- executable subtube-exe
--   import:         common-options
--   hs-source-dirs: app
--   main-is:        Main.hs
--   build-depends:  subtube
--   ghc-options:    -threaded -rtsopts -with-rtsopts=-N

executable subtube-api-server
  import:         common-options
  hs-source-dirs: api
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , rio
    , servant-docs
    , servant-js
    , servant-server
    , servant-swagger
    , servant-swagger-ui
    , subtube
    , swagger2
    , unix-time
    , wai                 >=3.2.3
    , warp                >=3.3.25

test-suite subtube-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    Gen.GenIns
    Gen.GenSpec
    Gen.Spec
    Psql.PsqlSpec
    Psql.Spec
    TestEnv

  build-depends:
    , genvalidity
    , genvalidity-aeson
    , genvalidity-containers
    , genvalidity-sydtest
    , genvalidity-text
    , genvalidity-uuid
    , hasql                   >=1.6.4.0
    , hasql-transaction
    , QuickCheck
    , quickcheck-text
    , rel8                    >=1.5.0
    , rio
    , static-text
    , subtube
    , sydtest
    , unliftio
    , uuid

  build-tool-depends: sydtest-discover:sydtest-discover >=0.0.0.3
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

benchmark subtube-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , subtube

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
